# readable-code-cpp-dev-setting-practice

./: .gitignore  README.md
example_project/: CMakeLists.txt
example_project/src/: main.cpp
